# BirthdayBot

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  GayRates.json  README.md  TROUBLESHOOTING.md  build.sh  docker-compose.yaml  env_example.txt  run_bot.sh
docker/: entrypoint.sh
src/: birthday_manager.cpp  birthday_manager.h  gayrate_manager.cpp  gayrate_manager.h  main.cpp
